--- a/foundations/04-chaining-selectors/index.html
+++ b/foundations/04-chaining-selectors/index.html
@@ -11,8 +11,8 @@
     <!-- Check image source path. Review Foundations lesson - Links and Images -->
     <!-- Use the classes BELOW this line -->
     <div>
-      <img class="avatar proportioned" src="" alt="Woman with glasses">
-      <img class="avatar distorted" src="" alt="Man with surprised expression">
+      <img class="avatar proportioned" src="./images/suprised_man_image.jpg" alt="Woman with glasses">
+      <img class="avatar distorted" src="./images/woman_with_glasses.jpg" alt="Man with surprised expression">
     </div>
     <!-- Use the classes ABOVE this line -->
     <div>
